tests/sources/invalid/generics/constraint_decl_errors.fire
// Malformed constraint declarations.

// Missing constraint name
constraint = int32;  //~ ERROR FS-PARSE-0010 @12

// Missing '=' after name
constraint NoAssign int32;  //~ ERROR FS-PARSE-0010 @21

// Missing type after '='
constraint NoType = ;  //~ ERROR FS-PARSE-0010 @21

// Trailing '|' with no following type
constraint Trailing = int32 | ;  //~ ERROR FS-PARSE-0010 @31

x: int32 = 1;
